[package]
name = "dct-tiv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
termion = "1.5.6"
fmtstring = { path = "../fmtstring" }
prisma = "0.1.1"
oklab = "*"

[profile.release]
debug = true
